--- a/src/app/shared/components/sponsor-ad/sponsored-ad.component.scss
+++ b/src/app/shared/components/sponsor-ad/sponsored-ad.component.scss
@@ -1,7 +1,7 @@
 @import 'variables.scss';
 
 .ad-wrap {
-  padding: 15px 0;
+  padding: 9px 0;
   border: 1px solid $regent-gray;
   border-width: 1px 0;
   margin: 0px 0 20px;
