--- a/src/app/shared/components/topic/topic.component.scss
+++ b/src/app/shared/components/topic/topic.component.scss
@@ -140,7 +140,7 @@
 
   .topic-block-lg {
     .topic-block-thumbnail {
-      padding-top: 66.6%;
+      padding-top: 66%;
     }
 
     /deep/ em {
